--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/preset-react": "^7.14.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
+    "style-loader": "^3.0.0",
     "webpack-cli": "^4.7.2"
   }
 }
