--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "learn-react",
   "private": true,
   "scripts": {
+    "start": "webpack server",
     "build": "webpack"
   },
   "repository": {
@@ -20,7 +21,9 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.0.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
